Sun Aug 17 07:30:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/mwc.pl:
        * bin/mpc.pl:
          Use RealBin to get the location of this script, that gives the
          real location also in case we use a symbolic link to these
          scripts. Thanks to Adam Mitz for pointing me to RealBin

Fri Aug 15 11:07:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * make/makeinclude/platform_aix_ibm.GNU:
          Added missing AIX compiler version 0800.

Wed Aug 13 14:40:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Truncate.h:
          Added missing specializations for Borland C++.

Wed Aug 13 14:18:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * m4/ace_defines.m4:
        * m4/ace_functions.m4:
        * m4/ace_headers.m4:
          Reverted change below, doesn't work on suse 11.1 yet

Wed Aug 13 13:22:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * m4/ace_defines.m4:
        * m4/ace_functions.m4:
        * m4/ace_headers.m4:
          Updated these files to work with autoconf 2.62. Thanks to
          Philipp Thomas <pth at suse dot de> for these patches. These
          are needed to use autoconf on OpenSuSE Factory (11.1 beta).
          This fixes bugzilla 3396.

Wed Aug 13 11:55:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Truncate.h:
          Added missing specializations for Borland C++.

Wed Aug 13 11:44:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.txt:
          Made several improvements to this new spec file. Thanks to
          Philipp Thomas <pth at suse dot de> for assisting with this

Tue Aug 12 19:45:16 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Time_Value.inl:
        * examples/OS/Process/process.cpp:
        * examples/Misc/test_dump.h:
        * examples/ASX/Event_Server/Event_Server/Supplier_Router.cpp: