@@ -792,9 +792,11 @@ to check <a href="#win32nonic">here</a> first. <p>
       <br>
       <code>set ACE_ROOT=C:\ACE_wrappers</code><br>
       <br>
-  </li><li>Set the BCBVER environment vairable to the main version of your Borland C++ compiler.
-      6 is the value for Borland C++ Builder 6, 8 the value for Borland C++ Builder 2006.
-      4 and 5 are also possible options but not supported anymore.<br>
+  </li><li>Set the BCBVER environment varoable to the main version of your Borland C++ compiler.
+      6 is the value for Borland C++ Builder 6, 8 the value for Borland C++ Builder 2006, 10 is 
+      for Borland CBuilderX, 11 is for CodeGear C++ Builder 2007, and 12 is for CodeGear C++ Builder
+      2009.
+<br>
       <br>
       <code>set BCBVER=6</code><br>
       <br>
